static/cartoview_dashboard/css/dashboard.css
body{
    background-color: #f0f0f0;
}
body.edit-mode{
  padding-top: 60px;
}
.btn,
.btn-sm,
.btn-xs,
.form-control{
  border-radius: 0;
}
.map-widget{
    height: 100%;
    width: 100%;
    position: relative;
}
.map-ct{
    height: 400px;
    width: 100%;
    margin: 0;
}
.map-panel
{
    height: 100%;
    width: 100%;
    margin: 0;
}

.zoom-buttons {
    margin-left: 5px;
    position: absolute;
    top: 5px;
}
.widget-ct{

}
.panel .widget.panel-body{
    padding: 0;
}
.panel{
  background-color: #FFF;
  box-shadow: 0 1px 2px rgba(0,0,0,.1);
  box-sizing: border-box;
  border-radius: 0;
  border: none;
}
.panel-default>.panel-heading{
  border: none;
  background-color: transparent;
  font-weight: 500;
  font-size: 15px;
}
.label{
  border-radius: 0;
  margin: 0 5px;
}
/*.widget-ct .panel{
  height: 100%;
  width: 100%;
}*/
.widget{
    width:100%;
    height: 100%;
    position: relative;
}

.bar-chart-ct,
.line-chart-ct,
.doughnut-chart-ct{
    padding: 10px;
}

.db-actions-ct{
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 60px;
}
.db-actions-ct .btn{
  border-radius: 50%;
  box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
  width: 56px;
  height: 56px;
  border: none;
  margin-bottom: 10px;
}

.db-actions-ct a.btn{
  line-height: 40px;
}



.loading{
  border-radius: 100%;
  border: 3px solid rgba(0, 0, 0, .1);
  border-top-color: rgba(0, 0, 0, .45);
  box-sizing: border-box;
  height: 30px;
  width: 30px;
  -webkit-animation:spin .7s linear infinite;
  animation:spin 2s linear infinite;
}

@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }

@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

/*
.rotating {
    -webkit-animation-name: rotate;
    -webkit-animation-duration: 2s;
    -webkit-animation-iteration-count: infinite;
    -webkit-animation-timing-function: linear;
    -moz-animation-name: rotate;
    -moz-animation-duration: 2s;
    -moz-animation-iteration-count: infinite;
    -moz-animation-timing-function: linear;
    animation-name: rotate;
    animation-duration: 2s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}
@-webkit-keyframes rotate {
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(360deg);}
}

@-moz-keyframes rotate {
    from {-moz-transform: rotate(0deg);}
    to {-moz-transform: rotate(360deg);}
}

@keyframes rotate {
    from {transform: rotate(0deg);}
    to {transform: rotate(360deg);}
}*/

